# rottengenizdat

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-worker.yml  docker-publish.yml  release.yml  rottengenizdat.yml
docs/: design.md
docs/plans/: phase-2-models.md
recipes/: README.md  amber.toml  bad-reception.toml  barely-there.toml  bitcrushed-god.toml  bone-xray.toml  choir-of-ghosts.toml  choir-practice.toml  concrete-music.toml  congregation.toml  darbouka-dream.toml  deja-vu.toml  dimension-skip.toml  drunk-choir.toml  event-horizon.toml  fever-dream.toml  ghost-in-the-machine.toml  glass-teeth.toml  granular.toml  hall-of-mirrors.toml  haunted-dub.toml  motor-mouth.toml  muscle-memory.toml  nature-documentary.toml  needle-drop.toml  organ-donor.toml  parallel-universe.toml  phantom-limb.toml  prayer-wheel.toml  ribs.toml  seizure-ward.toml  shortwave.toml  skull-radio.toml  sleep-paralysis.toml  slow-nerve.toml  sludge.toml  space-sickness.toml  speaking-in-tongues.toml  swarm.toml  tape-hiss.toml  (+2 more)
scripts/: generate_worker_recipes.py  setup-xformers-stubs.sh
src/rottengenizdat/: banner.py  chain.py  cli.py  config.py  core.py  inputs.py  plugin.py  recipe.py  sample_sale.py  slack_post.py  splice.py
tests/: conftest.py  test_chain.py  test_cli.py  test_config.py  test_core.py  test_inputs.py  test_plugin.py  test_rave.py  test_recipe.py  test_sample_sale.py  test_slack_post.py  test_splice.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: blocks.ts  github.ts  index.test.ts  index.ts  (+5 more)
(+12 files in other folders)
